data/derived/fa15/progs/unify/prog0903.ml.out
Characters 54-66:
  | h::t -> (10 * x) * h;;
            ^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
